fix layout problems
fix layout problems

--- a/styles/main.css
+++ b/styles/main.css
@@ -71,3 +71,8 @@
   border-bottom:none;
   margin: 0;
 }
+
+body, tr, td, p {
+    font-family: "Arial", "Helvetica", "sans-serif";
+    font-size: 12.5pt;
+}
